# fastapi-cursor

./: README.md  pyproject.toml
src/fastapi_cursor/: __init__.py  cursor.py  page.py  paginator.py
src/fastapi_cursor/backends/: __init__.py  base.py  memory.py  redis.py
tests/: conftest.py  test_cursor.py  test_memory_store.py  test_paginator.py  test_redis_store.py
