[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-cursor"
version = "0.1.0"
description = "Cursor/keyset pagination for SQLAlchemy Select statements in FastAPI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["fastapi", "pagination", "cursor", "keyset", "sqlalchemy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
redis = ["aioredis>=2.0"]
all = ["aioredis>=2.0"]

[project.urls]
Repository = "https://github.com/rgreen1207/fastapi-cursor"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_cursor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
